--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@swimlane/ngx-charts": "7.1.1",
     "@swimlane/ngx-datatable": "11.2.0",
     "angular-calendar": "0.23.7",
+    "angular-font-awesome": "^3.1.2",
     "angular2-text-mask": "8.0.4",
     "bootstrap": "4.0.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "2.5.3",
     "d3": "4.13.0",
     "dragula": "3.7.2",
+    "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "ng2-dragula": "1.5.0",
     "ng2-file-upload": "1.3.0",
